--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta name="keywords" content="visualization, npm, python" />
+    <meta name="author" content="Axel Nilsson">
+    <meta name="title" content="Visualization" />
+</head>
+
 Hello World
