--- a/index.html
+++ b/index.html
@@ -1,10 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="keywords" content="visualization, npm, python" />
+  <meta name="keywords" content="visualization, npm, python, graph" />
     <meta name="author" content="Axel Nilsson">
-    <meta name="title" content="Visualization" />
+    <meta name="title" content="Graph Visualization" />
 </head>
 
 <title> Graph Visualization of Wikipedia </title>
 Hello World
+
+<head>
+<style type="text/css">
+  #container {
+    max-width: 400px;
+    height: 400px;
+    margin: auto;
+  }
+</style>
+</head>
+
+<!-- <div id="sigma-container"></div>
+<script src="./sigma.js/build/sigma.min.js"></script>
+<script src="./sigma.js/build/plugins/sigma.parsers.gexf.min.js"></script>
+<script> -->
+
+<body>
+<div id="container"></div>
+<script src="./sigma.js/build/sigma.min.js"></script>
+<script>
+  // Let's first initialize sigma:
+  var s = new sigma('container');
+
+  // Then, let's add some data to display:
+  s.graph.addNode({
+    // Main attributes:
+    id: 'n0',
+    label: 'Hello',
+    // Display attributes:
+    x: 0,
+    y: 0,
+    size: 1,
+    color: '#f00'
+  }).addNode({
+    // Main attributes:
+    id: 'n1',
+    label: 'World !',
+    // Display attributes:
+    x: 1,
+    y: 1,
+    size: 1,
+    color: '#00f'
+  }).addEdge({
+    id: 'e0',
+    // Reference extremities:
+    source: 'n0',
+    target: 'n1'
+  });
+
+  // Finally, let's ask our sigma instance to refresh:
+  s.refresh();
+</script>
+</body>
+
+<!--<script>
+  sigma.parsers.gexf(
+    'VizTested.gephi',
+    { // Here is the ID of the DOM element that
+      // will contain the graph:
+      container: 'sigma-container'
+    },
+    function(s) {
+      // This function will be executed when the
+      // graph is displayed, with "s" the related
+      // sigma instance.
+    }
+  );
+</script>-->
+</html>
