--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Hello World
 <head>
 <style type="text/css">
   #container {
-    max-width: 400px;
+    max-width: 500px;
     height: 400px;
     margin: auto;
   }
@@ -26,7 +26,7 @@ Hello World
 
 <body>
 <div id="container"></div>
-<script src="./sigma.js/build/sigma.min.js"></script>
+<script src="./sigma_js/sigma.min.js"></script>
 <script>
   // Let's first initialize sigma:
   var s = new sigma('container');
