--- a/index.html
+++ b/index.html
@@ -7,29 +7,30 @@
 </head>
 
 <title> Graph Visualization of Wikipedia </title>
-Hello World
+Graph Visualization of Wikipedia Data
 
 <head>
 <style type="text/css">
-  #container {
+  #sigma-container {
     max-width: 500px;
     height: 400px;
     margin: auto;
   }
 </style>
 </head>
-
+<script src="./sigma_js/sigma.min.js"></script>
 <!-- <div id="sigma-container"></div>
 <script src="./sigma.js/build/sigma.min.js"></script>
 <script src="./sigma.js/build/plugins/sigma.parsers.gexf.min.js"></script>
 <script> -->
 
+<!--
 <body>
-<div id="container"></div>
-<script src="./sigma_js/sigma.min.js"></script>
+<div id="sigma-container"></div>
+
 <script>
   // Let's first initialize sigma:
-  var s = new sigma('container');
+  var s = new sigma('sigma-container');
 
   // Then, let's add some data to display:
   s.graph.addNode({
@@ -59,22 +60,22 @@ Hello World
 
   // Finally, let's ask our sigma instance to refresh:
   s.refresh();
-</script>
+</script> -->
 
 <div id="sigma-container"></div>
 <script src="./sigma_js/plugins/sigma.parsers.gexf.min.js"></script>
 <script>
 sigma.parsers.gexf(
- './data/VizTested.gephi',
+ 'peaks_graph.gexf',
  { // Here is the ID of the DOM element that
    // will contain the graph:
    container: 'sigma-container'
  },
- function(s) {
+ //function(s) {
    // This function will be executed when the
    // graph is displayed, with "s" the related
    // sigma instance.
- }
+ //}
 );
 </script>
 
