testing online gexf parsing

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta name="keywords" content="visualization, npm, python, graph" />
@@ -12,21 +11,22 @@ Graph Visualization of Wikipedia Data
 <head>
 <style type="text/css">
   #sigma-container {
-    max-width: 500px;
-    height: 400px;
+    max-width: 420px;
+    height: 262px;
     margin: auto;
   }
 </style>
 </head>
 <script src="./sigma_js/sigma.min.js"></script>
+
 <!-- <div id="sigma-container"></div>
 <script src="./sigma.js/build/sigma.min.js"></script>
 <script src="./sigma.js/build/plugins/sigma.parsers.gexf.min.js"></script>
 <script> -->
 
-<!--
+
 <body>
-<div id="sigma-container"></div>
+<div class="box" id="sigma-container"></div>
 
 <script>
   // Let's first initialize sigma:
@@ -60,13 +60,18 @@ Graph Visualization of Wikipedia Data
 
   // Finally, let's ask our sigma instance to refresh:
   s.refresh();
-</script> -->
+</script>
+
+<!--  <div class="line"></div> -->
 
 <div id="sigma-container"></div>
-<script src="./sigma_js/plugins/sigma.parsers.gexf.min.js"></script>
+
+<!-- <script src="./sigma.js/plugins/sigma.parsers.gexf.js"></script>    'https://axeln78.github.io/peaks_graph.gexf' -->
+<script src="sigma.js/plugins/sigma.parsers.gexf/gexf-parser.js"></script>
+<script src="sigma.js/plugins/sigma.parsers.gexf/sigma.parsers.gexf.js"></script>
 <script>
 sigma.parsers.gexf(
- 'peaks_graph.gexf',
+ 'http://0.0.0.0:8000/',
  { // Here is the ID of the DOM element that
    // will contain the graph:
    container: 'sigma-container'
