--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@ Graph Visualization of Wikipedia Data
 
 <!--  <div class="line"></div> -->
 
-<div id="sigma-container"></div>
+<div class="box" id="sigma-container2"></div>
 
-<script src="./sigma.js/plugins/sigma.parsers.gexf.js"></script>
+<script src="./sigma.js/plugins/sigma.parsers.gexf.min.js"></script>
 <!-- <script src="sigma.js/plugins/sigma.parsers.gexf/gexf-parser.js"></script>
 <script src="sigma.js/plugins/sigma.parsers.gexf/sigma.parsers.gexf.js"></script> -->
 <script>
@@ -74,7 +74,7 @@ sigma.parsers.gexf(
  'peaks_graph.gexf',
  { // Here is the ID of the DOM element that
    // will contain the graph:
-   container: 'sigma-container'
+   container: 'sigma-container2'
  },
  //function(s) {
    // This function will be executed when the
