--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Graph Visualization of Wikipedia Data
 
 <div class="box" id="sigma-container2"></div>
 
-<script src="./sigma.js/plugins/sigma.parsers.gexf.min.js"></script>
+<script src="./sigma_js/plugins/sigma.parsers.gexf.min.js"></script>
 <!-- <script src="sigma.js/plugins/sigma.parsers.gexf/gexf-parser.js"></script>
 <script src="sigma.js/plugins/sigma.parsers.gexf/sigma.parsers.gexf.js"></script> -->
 <script>
