--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Graph Visualization of Wikipedia Data
 <script src="sigma.js/plugins/sigma.parsers.gexf/sigma.parsers.gexf.js"></script> -->
 <script>
 sigma.parsers.gexf(
- 'peaks_graph.gexf',
+ 'data/peaks_graph.gexf',
  { // Here is the ID of the DOM element that
    // will contain the graph:
    container: 'sigma-container'
