--- a/index2.html
+++ b/index2.html
@@ -25,6 +25,23 @@
     border-width: 1px;
   }
 </style>
+<style>
+
+.axis--grid .domain {
+  fill: #ddd;
+  stroke: none;
+}
+
+.axis--x .domain,
+.axis--grid .tick line {
+  stroke: #fff;
+}
+
+.axis--grid .tick--minor line {
+  stroke-opacity: .5;
+}
+
+</style>
 </head>
 <!-- Sigma Inclusion -->
 <script src="./sigma_js/sigma.min.js"></script>
@@ -69,99 +86,15 @@
 </script>
 
 <div class="box" id="sigma-container2"></div>
+<script type="text/javascript" src="scriptRender.js"></script>
 
-<!-- <script>
-sigma.parsers.gexf(
- '../data/VizWiki1.gexf',
- {
-   container: 'sigma-container2'
- },
- function(s){
+<!-- D3 Inclusion -->
+<script src="https://d3js.org:d3-brush.v1.min.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
 
- }
-);
-</script> -->
-<script type="text/javascript" src="scriptRender1.js">
-
-</script>
-<!-- script>
-  // Add a method to the graph model that returns an
-  // object with every neighbors of a node inside:
-  sigma.classes.graph.addMethod('neighbors', function(nodeId) {
-    var k,
-        neighbors = {},
-        index = this.allNeighborsIndex[nodeId] || {};
-
-    for (k in index)
-      neighbors[k] = this.nodesIndex[k];
-
-    return neighbors;
-  });
-
-  sigma.parsers.gexf(
-    '../data/VizWiki1.gexf',
-    {
-      container: 'sigma-container2'
-    },
-    function(s) {
-      // We first need to save the original colors of our
-      // nodes and edges, like this:
-      s.graph.nodes().forEach(function(n) {
-        n.originalColor = n.color;
-      });
-      s.graph.edges().forEach(function(e) {
-        e.originalColor = e.color;
-      });
-
-      // When a node is clicked, we check for each node
-      // if it is a neighbor of the clicked one. If not,
-      // we set its color as grey, and else, it takes its
-      // original color.
-      // We do the same for the edges, and we only keep
-      // edges that have both extremities colored.
-      s.bind('clickNode', function(e) {
-        var nodeId = e.data.node.id,
-            toKeep = s.graph.neighbors(nodeId);
-        toKeep[nodeId] = e.data.node;
-
-        s.graph.nodes().forEach(function(n) {
-          if (toKeep[n.id])
-            n.color = n.originalColor;
-          else
-            n.color = '#eee';
-        });
-
-        s.graph.edges().forEach(function(e) {
-          if (toKeep[e.source] && toKeep[e.target])
-            e.color = e.originalColor;
-          else
-            e.color = '#eee';
-        });
-
-        // Since the data has been modified, we need to
-        // call the refresh method to make the colors
-        // update effective.
-        s.refresh();
-      });
-
-      // When the stage is clicked, we just color each
-      // node and edge with its original color.
-      s.bind('clickStage', function(e) {
-        s.graph.nodes().forEach(function(n) {
-          n.color = n.originalColor;
-        });
-
-        s.graph.edges().forEach(function(e) {
-          e.color = e.originalColor;
-        });
-
-        // Same as in the previous event:
-        s.refresh();
-      });
-    }
-  );
-</script> -->
-
+<!-- Brush element -->
+<p>Brush element</p>
+<script type="text/javascript" src="brushelement.js"></script>
 
 </body>
 </html>
