--- a/index.html
+++ b/index.html
@@ -2,18 +2,7 @@
 <html lang="en">
 <head>
 
-<style type="text/css">
-    body {
-      margin: 10;
-    }
-    #sigma-container2 {
-      position: absolute;
-      width: 100%;
-      height: 600px;
-      border-style: solid;
-      border-width: 1px;
-    }
-  </style>
+<link rel="stylesheet" type="text/css" href="css/style1.css">
 
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -68,17 +57,17 @@
 
   <body>
 
-<div class="container" id="Sigma" style="margin-bottom: 800%">
+<div class="container" id="Sigma" style="margin-bottom: 50%">
   <div class="row">
    <div class="one-half column" > <h3>Sigma JS</h3> </div>
-    <div class="one-half column"> <p> A JS library for displaying grpahs in WebGL</p></div>
+    <div class="one-half column"> <p> A JS library for displaying graphs in WebGL</p></div>
   </div>
 
  <div class=row id ="Render">
-  <div class="ten columns" id="sigma-container2"></div>
+  <div class="box" id="sigma-container2"></div>
  </div>
 
-  <script type="text/javascript" src="scriptRender1.js"> </script>
+  <script type="text/javascript" src="scriptRender.js"> </script>
 </div>
 
   <!-- Link to dev -->
