--- a/index2.html
+++ b/index2.html
@@ -9,22 +9,7 @@
 <h2> Where renders get dangerous and can crash your browser. Make sure to fasten your seatbelt <h2>
 
 <head>
-<style type="text/css">
-  #sigma-container {
-    max-width: 420px;
-    height: 262px;
-    margin: auto;
-    border-style: solid;
-    border-width: 1px;
-  }
-  #sigma-container2 {
-    max-width: 800px;
-    height: 600px;
-    margin: auto;
-    border-style: solid;
-    border-width: 1px;
-  }
-</style>
+<link rel="stylesheet" type="text/css" href="css/style1.css">
 <style>
 
 .axis--grid .domain {
