Put sigma_js in lib/ Using Prettier instead of standard-JS linter use HTML range element instead of brush for prototyping x

--- a/index.html
+++ b/index.html
@@ -1,41 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+    <link rel="stylesheet" type="text/css" href="css/style1.css" />
 
-<link rel="stylesheet" type="text/css" href="css/style1.css">
-
-  <!-- Basic Page Needs
+    <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title> Graph Visualization of Wikipedia </title>
-  <meta name="description" content="Graph Visualization of Wikipedia">
-  <meta name="author" content="Axel Nilsson">
-  <meta name="title" content="Graph Visualization">
+    <meta charset="utf-8" />
+    <title>Graph Visualization of Wikipedia</title>
+    <meta name="description" content="Graph Visualization of Wikipedia" />
+    <meta name="author" content="Axel Nilsson" />
+    <meta name="title" content="Graph Visualization" />
 
-  <!-- Mobile Specific Metas
+    <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- FONT
+    <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-  <!-- CSS
+    <link
+      href="//fonts.googleapis.com/css?family=Raleway:400,300,600"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/skeleton.css" />
 
-  <!-- Favicon
+    <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="icon" type="image/png" href="images/favicon.png" />
 
-  <!-- Sigma
+    <!-- Sigma
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <script src="./sigma_js/sigma.min.js"></script>
-  <script src="./sigma_js/plugins/sigma.parsers.gexf.min.js"></script>
+    <script src="./lib/sigma_js/sigma.min.js"></script>
+    <script src="./lib/sigma_js/plugins/sigma.parsers.gexf.min.js"></script>
 
-</head>
-
+    <!-- D3 Inclusion
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <script src="./lib/d3js.org:d3-brush.v1.min.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+  </head>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -50,7 +60,11 @@
   <div class="container">
     <div class="row">
       <div class="one-half column">
-        <p>This website is to experiment and display graphs as a part of the development of the project of visualization of a sub-set of Wikipedia pages. This project is linked to a university project at EPFL </p>
+        <p>
+          This website is to experiment and display graphs as a part of the
+          development of the project of visualization of a sub-set of Wikipedia
+          pages. This project is linked to a university project at EPFL
+        </p>
       </div>
     </div>
   </div>
@@ -58,45 +72,63 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="one-half column"> <h3>The dataset</h3> </div>
-        <div class="one-half column"> <p>Each node represents a Wikipedia page, each link or edge represents the hyperlinks to which one can be directed to from another page.</p> </div>
+        <div class="one-half column"><h3>The dataset</h3></div>
+        <div class="one-half column">
+          <p>
+            Each node represents a Wikipedia page, each link or edge represents
+            the hyperlinks to which one can be directed to from another page.
+          </p>
+        </div>
       </div>
     </div>
 
-<div class="container" id="Sigma" style="margin-bottom: 10%">
-  <div class="row">
-   <div class="one-half column"> <p> A JS library for displaying graphs in WebGL</p></div>
-   <div class="one-half column" > <h3>Sigma JS</h3> </div>
-  </div>
+    <div class="container" id="Sigma" style="margin-bottom: 10%">
+      <div class="row">
+        <div class="one-half column">
+          <p>A JS library for displaying graphs in WebGL</p>
+        </div>
+        <div class="one-half column"><h3>Sigma JS</h3></div>
+      </div>
 
- <div class=row id ="Render">
-  <div class="box" id="sigma-container2"></div>
- </div>
+      <div class="row" id="Render">
+        <button id="layout" type="button">Layout</button>
+        <div class="box" id="sigma-container2"></div>
+      </div>
 
-  <script type="text/javascript" src="index.js"> </script>
-</div>
-
-  <!-- Link to dev -->
-  <div class="container" id="testEnv" style="margin-top: 10%">
-    <div class="row">
-      <h6>Access to the test environment where new renders are made. Enter at your own risk!</h6>
-      <a class="button" href="index2.html">Test Environment</a>
+      <div>
+        <input type="range" id="range" name="date" min="0" max="5000" />
+        <label for="date">TimeLine</label>
+      </div>
+      <script type="text/javascript" src="index.js"></script>
     </div>
-  </div>
 
-
-<!-- Link to resources -->
-  <div class="container">
-    <div class="row">
-      <div class="one-half column" style="margin-top: 10%">
-        <h5>Exernal resources and links:</h5>
-        <p> For the Structure of the website, there is a simply built boiler plate in CSS called "Skeleton".<a href="http://www.getskeleton.com">Skeleton documentation</a></p>
+    <!-- Link to dev -->
+    <div class="container" id="testEnv" style="margin-top: 10%">
+      <div class="row">
+        <h6>
+          Access to the test environment where new renders are made. Enter at
+          your own risk!
+        </h6>
+        <a class="button" href="index2.html">Test Environment</a>
       </div>
     </div>
-  </div>
 
+    <!-- Link to resources -->
+    <div class="container">
+      <div class="row">
+        <div class="one-half column" style="margin-top: 10%">
+          <h5>Exernal resources and links:</h5>
+          <p>
+            For the Structure of the website, there is a simply built boiler
+            plate in CSS called "Skeleton".<a href="http://www.getskeleton.com"
+              >Skeleton documentation</a
+            >
+          </p>
+        </div>
+      </div>
+    </div>
 
-<!-- End Document
+    <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-</body>
+  </body>
 </html>
