Force Atlas 2 integration

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <script src="./lib/sigma_js/sigma.min.js"></script>
     <script src="./lib/sigma_js/plugins/sigma.parsers.gexf.min.js"></script>
+    <script src="./lib/sigma_js/plugins/sigma.layout.forceAtlas2.min.js"></script>
 
     <!-- D3 Inclusion
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
