Interaction batween the slider and the boundaries of the plot

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </div>
     </div>
 
-    <div class="container" id="Sigma" style="margin-bottom: 10%">
+    <div class="container" id="Sigma" style="margin-bottom: Z%">
       <div class="row">
         <div class="one-half column">
           <p>A JS library for displaying graphs in WebGL</p>
@@ -101,7 +101,7 @@
       </div>
 
       <div>
-        <input type="range" id="range" name="date" min="0" max="5277" />
+        <input type="range" id="range" name="date" min="0" max="220" />
         <label for="date">TimeLine</label>
       </div>
     </div>
@@ -114,7 +114,7 @@
     </div>
 
     <!-- Link to dev -->
-    <div class="container" id="testEnv" style="margin-top: 10%">
+    <div class="container" id="testEnv" style="margin-top: 2%">
       <div class="row">
         <h6>
           Access to the test environment where new renders are made. Enter at
@@ -127,7 +127,7 @@
     <!-- Link to resources -->
     <div class="container">
       <div class="row">
-        <div class="one-half column" style="margin-top: 10%">
+        <div class="one-half column" style="margin-top: 2%">
           <h5>Exernal resources and links:</h5>
           <p>
             For the Structure of the website, there is a simply built boiler
