--- a/index2.html
+++ b/index2.html
@@ -1,72 +1,76 @@
 <html lang="en">
-<head>
-  <meta name="keywords" content="visualization, npm, python, graph" />
-    <meta name="author" content="Axel Nilsson">
+  <head>
+    <meta name="keywords" content="visualization, npm, python, graph" />
+    <meta name="author" content="Axel Nilsson" />
     <meta name="title" content="Graph Visualization" />
-</head>
+  </head>
 
-<title> Graph Visualization of Wikipedia </title>
-<h2> Where renders get dangerous and can crash your browser. Make sure to fasten your seatbelt <h2>
+  <title>Graph Visualization of Wikipedia</title>
+  <h2>
+    Where renders get dangerous and can crash your browser. Make sure to fasten
+    your seatbelt
+    <h2>
+      <head>
+        <link rel="stylesheet" type="text/css" href="css/style1.css" />
+      </head>
+      <!-- Sigma Inclusion -->
+      <script src="./sigma_js/sigma.min.js"></script>
+      <script src="./sigma_js/plugins/sigma.parsers.gexf.min.js"></script>
 
-<head>
-<link rel="stylesheet" type="text/css" href="css/style1.css">
+      <!-- Render display -->
+      <body>
+        <div class="box" id="sigma-container"></div>
 
-</head>
-<!-- Sigma Inclusion -->
-<script src="./sigma_js/sigma.min.js"></script>
-<script src="./sigma_js/plugins/sigma.parsers.gexf.min.js"></script>
+        <!-- Hello World - Sigma  -->
+        <script>
+          // Let's first initialize sigma:
+          var s = new sigma("sigma-container");
 
+          // Then, let's add some data to display:
+          s.graph
+            .addNode({
+              // Main attributes:
+              id: "n0",
+              label: "Hello",
+              // Display attributes:
+              x: 0,
+              y: 0,
+              size: 1,
+              color: "#f00"
+            })
+            .addNode({
+              // Main attributes:
+              id: "n1",
+              label: "World !",
+              // Display attributes:
+              x: 1,
+              y: 1,
+              size: 1,
+              color: "#00f"
+            })
+            .addEdge({
+              id: "e0",
+              // Reference extremities:
+              source: "n0",
+              target: "n1"
+            });
 
-<!-- Render display -->
-<body>
-<div class="box" id="sigma-container"></div>
+          s.refresh();
+        </script>
 
-<!-- Hello World - Sigma  -->
- <script>
-  // Let's first initialize sigma:
-  var s = new sigma('sigma-container');
+        <!-- Interactive (click) rendering - Sigma  -->
+        <div class="box" id="sigma-container2"></div>
+        <!--<script type="text/javascript" src=".js"></script> -->
 
-  // Then, let's add some data to display:
-  s.graph.addNode({
-    // Main attributes:
-    id: 'n0',
-    label: 'Hello',
-    // Display attributes:
-    x: 0,
-    y: 0,
-    size: 1,
-    color: '#f00'
-  }).addNode({
-    // Main attributes:
-    id: 'n1',
-    label: 'World !',
-    // Display attributes:
-    x: 1,
-    y: 1,
-    size: 1,
-    color: '#00f'
-  }).addEdge({
-    id: 'e0',
-    // Reference extremities:
-    source: 'n0',
-    target: 'n1'
-  });
+        <!-- D3 Inclusion -->
+        <script src="https://d3js.org:d3-brush.v1.min.js"></script>
+        <script src="https://d3js.org/d3.v4.min.js"></script>
 
-  s.refresh();
-</script>
+        <!-- Brush element -->
+        <script type="text/javascript" src="index.js"></script>
 
-<!-- Interactive (click) rendering - Sigma  -->
-<div class="box" id="sigma-container2"></div>
-<!--<script type="text/javascript" src=".js"></script> --> 
-
-<!-- D3 Inclusion -->
-<script src="https://d3js.org:d3-brush.v1.min.js"></script>
-<script src="https://d3js.org/d3.v4.min.js"></script>
-
-<!-- Brush element -->
-<script type="text/javascript" src="index.js"></script>
-
-<p>Brush element</p>
-
-</body>
+        <p>Brush element</p>
+      </body>
+    </h2>
+  </h2>
 </html>
