Changed the interaction and changed all of the node callings from objects to arrays

--- a/index.html
+++ b/index.html
@@ -97,11 +97,19 @@
 
       <div class="row" id="Render">
         <button id="layout" type="button">Layout</button>
+        <button id="selectionR" type="button">Reset selection</button>
         <div class="box" id="sigma-container2"></div>
       </div>
 
       <div>
-        <input type="range" id="range" name="date" min="0" max="220" />
+        <input
+          type="range"
+          id="range"
+          name="date"
+          min="0"
+          max="220"
+          value="220"
+        />
         <label for="date">TimeLine</label>
       </div>
     </div>
