Added Noverlap function

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <script src="./lib/sigma_js/plugins/sigma.plugins.filter.min.js"></script>
     <script src="./lib/sigma_js/plugins/sigma.exporters.svg.min.js"></script>
     <script src="./lib/sigma_js/plugins/sigma.layout.noverlap.min.js"></script>
+    <script src="./lib/sigma_js/plugins/sigma.plugins.animate.min.js"></script>
 
     <!-- Plotly
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -102,6 +103,7 @@
         <button id="layout" type="button">Layout</button>
         <button id="selectionR" type="button">Reset selection</button>
         <button id="export" type="export">Export</button>
+        <button id="noverlap" type="button">Noverlap</button>
         <div class="box" id="sigma-container2"></div>
       </div>
 
