Faster charging of the data

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     </div>
 
     <!-- Link to dev -->
-    <div class="container" id="testEnv" style="margin-top: 2%">
+    <!--  <div class="container" id="testEnv" style="margin-top: 2%">
       <div class="row">
         <h6>
           Access to the test environment where new renders are made. Enter at
@@ -162,7 +162,7 @@
         </h6>
         <a class="button" href="index2.html">Test Environment</a>
       </div>
-    </div>
+    </div> -->
 
     <!-- Link to resources -->
     <div class="container">
