Changed the memory structure of the selected nodes and solved the issue of not showing the edges

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
         <button id="layout" type="button">Layout</button>
         <button id="selectionR" type="button">Reset selection</button>
         <button id="export" type="export">Export</button>
-        <button id="noverlap" type="button">Noverlap</button><br />
+        <button id="noverlap" type="button">Noverlap</button>
+        <button id="selectMode" type="button">Single Node</button><br />
 
         Lower threshold:
         <input type="number" id="lower-threshold" name="lthresh" value="0" />
