Checkbox for multi-node selection

--- a/index.html
+++ b/index.html
@@ -100,7 +100,14 @@
         <button id="selectionR" type="button">Reset selection</button>
         <button id="export" type="export">Export</button>
         <button id="noverlap" type="button">Noverlap</button>
-        <button id="selectMode" type="button">Single Node</button><br />
+        <!-- <button id="selectMode" type="button">Single Node</button> -->
+        <input
+          id="Checkbox"
+          type="checkbox"
+          name="Neighbour node selection"
+          value="Null"
+        />
+        Group node selection<br />
 
         Lower threshold:
         <input type="number" id="lower-threshold" name="lthresh" value="0" />
